<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <TextView
            android:text="@string/activity_register_title"
            android:textSize="35sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_login_title_view" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/activity_register_user_view"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/activity_register_user_text"
            android:ems="10"
            tools:layout_editor_absoluteY="208dp" android:id="@+id/activity_register_user_view"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" tools:ignore="MissingConstraints"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/activity_register_pass1"
            android:ems="10"
            android:id="@+id/activity_register_pass1_view"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/activity_register_user_view"
            app:layout_constraintVertical_bias="0.016"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/activity_register_pass2"
            android:ems="10"
            android:id="@+id/activity_register_pass2_view"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/activity_register_pass1_view" app:layout_constraintVertical_bias="0.016"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/activity_register_email"
            android:ems="10"
            android:id="@+id/activity_register_email_view"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/activity_register_pass2_view" app:layout_constraintVertical_bias="0.016"/>
    <Button
            android:text="@string/activity_register_button_text"
            android:textColor="@android:color/darker_gray"
            android:background="#FFFFFF"
            android:shadowColor="#FFFFFF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_register_button" android:layout_marginTop="52dp"
            app:layout_constraintTop_toBottomOf="@+id/activity_register_email_view"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.498"/>

    <TextView
            android:text=""
            android:textColor="@android:color/holo_orange_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_register_error_view" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/activity_register_button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>