<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/activity_login">

    <TextView
            android:id="@+id/activity_login_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/activity_login_title"
            android:textSize="35sp"
            app:layout_constraintBottom_toTopOf="@+id/activity_login_user_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.684" />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/activity_login_user_text"
            android:ems="10"
            tools:layout_editor_absoluteY="210dp" android:id="@+id/activity_login_user_view"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" tools:ignore="MissingConstraints"
            android:importantForAutofill="yes" />

    <EditText
            android:id="@+id/activity_login_password_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/activity_login_pass"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_user_view"
            app:layout_constraintVertical_bias="0.108"
            android:importantForAutofill="yes" />

    <Button
            android:id="@+id/activity_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="8dp"
            android:background="#000000"
            android:shadowColor="#FFFFFF"
            android:text="@string/activity_login_button_text"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_password_view" />

    <Button
            android:id="@+id/activity_login_register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:background="#000000"
            android:shadowColor="#FFFFFF"
            android:text="@string/activity_login_register_button_text"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.511"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_button"
            app:layout_constraintVertical_bias="0.0" />

    <TextView
            android:text=""
            android:textColor="@android:color/holo_orange_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_login_error_view" android:layout_marginTop="76dp"
            app:layout_constraintTop_toBottomOf="@+id/activity_login_register_button"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>